// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxModalTitle customize 1`] = `
<div>
  <h3
    class="modal-title bazinga"
  >
    Test
  </h3>
</div>
`;

exports[`loads and displays CxModalTitle component 1`] = `
<div>
  <h2
    class="modal-title"
  >
    Test
  </h2>
</div>
`;
